unpackaged/main/default/objects/nbavs__Dial_List_Retry__c/nbavs__Dial_List_Retry__c.object-meta.xml
<CustomObject>
    <label>Dial List Retry</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Dial List Retry Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dial List Retries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>