unpackaged/main/default/objects/nbavs__Dial_List_Retry__c/fields/nbavs__Dial_List__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Dial_List__c</fullName>
    <label>Dial List</label>
    <referenceTo>nbavs__DialList__c</referenceTo>
    <relationshipLabel>Dial List Retries</relationshipLabel>
    <relationshipName>Dial_List_Retries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>