unpackaged/main/default/objects/nbavs__Dial_List_Retry__c/fields/nbavs__Order__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>