unpackaged/main/default/objects/nbavs__Dial_List_Retry__c/fields/nbavs__Period_Name__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Period_Name__c</fullName>
    <defaultValue>&quot;Minute&quot;</defaultValue>
    <label>Period Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minute</fullName>
                <default>true</default>
                <label>Minutes</label>
            </value>
            <value>
                <fullName>Hour</fullName>
                <label>Hours</label>
            </value>
            <value>
                <fullName>Day</fullName>
                <label>Days</label>
            </value>
            <value>
                <fullName>Week</fullName>
                <label>Weeks</label>
            </value>
            <value>
                <fullName>Month</fullName>
                <label>Months</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>