unpackaged/main/default/objects/nbavs__Dial_List_Retry__c/fields/nbavs__Retry_Action__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Retry_Action__c</fullName>
    <defaultValue>&quot;Stop&quot;</defaultValue>
    <label>Retry Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stop</fullName>
                <default>true</default>
                <label>Finished</label>
            </value>
            <value>
                <fullName>NextDay</fullName>
                <label>Retry Day After</label>
            </value>
            <value>
                <fullName>NextWeek</fullName>
                <label>Retry Week After</label>
            </value>
            <value>
                <fullName>NextMonth</fullName>
                <label>Retry Month After</label>
            </value>
            <value>
                <fullName>RetryAfter</fullName>
                <label>Retry After</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>