unpackaged/main/default/objects/nbavs__Dial_List_Retry__c/fields/nbavs__Wait_Period__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Wait_Period__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Wait Period</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>